--- a/react/index.html
+++ b/react/index.html
@@ -16,5 +16,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   </body>
 </html>
