profile page and tab

--- a/react/index.html
+++ b/react/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/trellisLogo3.ico" />
     <!-- Include site CSS -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>Final Capstone</title>
+    <title>Trellis - Crowdfunding Support</title>
   </head>
   <body>
     <noscript>
